# firstCPPraylib00

HelloCpp/: CMakeLists.txt  README.md
HelloCpp/src/: main.cpp
